# ImageReader

./: .gitignore  CMakeLists.txt  build.bat  build.sh
core/: CMakeLists.txt  main.c
core/include/: file_core.h
core/source/: file_core.c
viewer/: CMakeLists.txt  main.c
viewer/include/: reader.h
viewer/source/: reader.c
